Bug 511491 - Firefox Windows shadows frequently show as black bars with KWIN_USE_OVERLAYS=1
Summary: Firefox Windows shadows frequently show as black bars with KWIN_USE_OVERLAYS=1
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: 6.5.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-02 01:25 UTC by dofficialgman
Modified: 2025-11-21 22:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.3
Sentry Crash Report:


Attachments
requested drm_info when black bars are visible (108.21 KB, text/plain)
2025-11-16 23:38 UTC, dofficialgman
Details
2nd drm_info output incase I messed up the timing in one (108.21 KB, text/plain)
2025-11-16 23:42 UTC, dofficialgman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dofficialgman 2025-11-02 01:25:13 UTC
SUMMARY
Firefox Windows shadows frequently show as black bars with KWIN_USE_OVERLAYS=1.

STEPS TO REPRODUCE
1. install official firefox release (in my case, on KDE Neon via the official Firefox apt repo
2. open firefox and make it not fullscreen
3. click onto another window
4. wait a few seconds and then click back and observe black bars where shadows should be (this is most common during video playback in firefox but can occur on any page with enough time)

OBSERVED RESULT
black bars where the shadows should be

EXPECTED RESULT
normal shadows

SOFTWARE/OS VERSIONS
Operating System: KDE neon User Edition
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.14.0-34-generic (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 7640U w/ Radeon 760M Graphics
Memory: 16 GiB of RAM (14.9 GiB usable)
Graphics Processor: AMD Radeon 760M

ADDITIONAL INFORMATION
Device: AMD Framework 13
Comment 1 Zamundaaa 2025-11-03 14:19:17 UTC
I can't replicate that here.

Please get the output of drm_info from when  the black bars are visible.
Comment 2 dofficialgman 2025-11-16 23:37:55 UTC
Sure thing. A bit hard to obtain that information since entering another window or another window update can cause the black bars to disappear. I was able to obtain it by activating the command `sleep 10; drm_info > drm_info.txt` minimizing the terminal, then interacting/moving/resizing firefox window until the black bars are visible (before the 10 second sleep was up) then just waiting for the command to execute.
Comment 3 dofficialgman 2025-11-16 23:38:24 UTC
Created attachment 186871 [details]
requested drm_info when black bars are visible
Comment 4 dofficialgman 2025-11-16 23:42:48 UTC
Created attachment 186872 [details]
2nd drm_info output incase I messed up the timing in one
Comment 5 Bug Janitor Service 2025-11-17 15:55:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8443
Comment 6 Zamundaaa 2025-11-18 13:57:47 UTC
Git commit f83accd60acb1f7c074b7a37724a5315819e59c6 by Xaver Hugl.
Committed on 18/11/2025 at 12:45.
Pushed by zamundaaa into branch 'master'.

scene/workspacescene: don't put non-opaque items on an underlay

Otherwise they get blended with black, instead of the scene below them.

M  +5    -0    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/-/commit/f83accd60acb1f7c074b7a37724a5315819e59c6
Comment 7 Zamundaaa 2025-11-18 15:30:05 UTC
Git commit 6a6378feeeccc3767051dabd1691596e74236861 by Xaver Hugl.
Committed on 18/11/2025 at 14:52.
Pushed by zamundaaa into branch 'Plasma/6.5'.

scene/workspacescene: don't put non-opaque items on an underlay

Otherwise they get blended with black, instead of the scene below them.


(cherry picked from commit f83accd60acb1f7c074b7a37724a5315819e59c6)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +5    -0    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/-/commit/6a6378feeeccc3767051dabd1691596e74236861