scene/workspacescene: don't put non-opaque items on an underlay

Otherwise they get blended with black, instead of the scene below them.

BUG: 511491


(cherry picked from commit f83accd60acb1f7c074b7a37724a5315819e59c6)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>